crates/frontend/tests/compile_libsolidity.rs
// Auto-generated compilation tests for the **libsolidity** dataset.
//
// Each `.sol` file that is *not* an expected-error test gets its own
// `#[test]` function, generated by `build.rs` at compile time.
// New files are picked up automatically on rebuild.

#[path = "test_utils.rs"]
mod test_utils;

include!(concat!(env!("OUT_DIR"), "/compile_libsolidity_tests.rs"));
